# maritime-edge-ai-intel-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_REVISION_REPORT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  pytest.ini  traceability_verification_report.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/base/: Dockerfile  README.md  requirements.in  requirements.txt
docs/: QA.md
docs/docx/: Comprendre l’imagerie SAR Sentinel-1 de bout en bout.docx  PH0-CORR-002_protocole_ground_truth.docx  Phase_II_Engineering_Progress_Report_Full.docx  Point_avancement_Phase_II_KSF.docx  Proposal for Phase II Extension.docx  maritime_edge_ai_phase2_master_definition.docx
phase0/: README.md  colab_preprocessing.ipynb  download_scenes.py  gfw_annotations.py  requirements.in  requirements.txt  sar_preprocessing.py
phase0/data/annotations/: global_summary.json
phase0/docs/: phase0_closure.md  phase0_report.md
phase0/notebooks/: README.md  colab_finetune_yolo.ipynb  colab_phase0_full_pipeline.ipynb  colab_phase0_pipeline.ipynb  colab_phase0_pipeline_final.ipynb  colab_traceability_check_.ipynb  colab_traceability_check_v1.ipynb  colab_traceability_check_v2.ipynb
phase0/scripts/: README.md  _diagnostic_threshold_sweep.py  analyze_domain_shift.py  annotation_server.py  benchmark_pipeline.py  cvat_fallback_validator.py  download_scenes.py  export_colab_dataset.py  gfw_annotations.py  sar_preprocessing.py  visualize_samples.py
phase0/scripts/data/density/: ais_density_map.json
phase0/scripts/diagnostics/: colab_traceability_check.py  gcp_parity_proof.py
phase0/tests/: test_download_scenes.py  test_gcp_cross_implementation.py  test_gcp_interpolation.py  test_gfw_annotations.py
phase_post0/: README.md  build_finetune_dataset.py  colab_finetune_yolo.ipynb  dataset_summary.json  fix_bbox_sizes.py  phase0_closure.md
phase_post0/notebooks/: colab_finetune_detector_v2.ipynb
phase_post0/scripts/: regenerate_zip.sh
research/: __init__.py
research/notebooks/: README.md  colab_finetune_detector_v2.ipynb  colab_phase0_pipeline_v1.ipynb  colab_traceability_check_v1.ipynb  colab_traceability_check_v2.ipynb
research/scripts/: __init__.py  add_fp_audit_cell.py  analyze_domain_shift.py  annotation_server.py  audit_all_scenes.py  benchmark_pipeline.py  build_finetune_dataset.py  compare_platform_distributions.py  cvat_fallback_validator.py  dataset_traceability.py  download_scenes.py  export_colab_dataset.py  fix_bbox_sizes.py  fp_audit_cell_code.py  gfw_annotations.py  process_all_scenes.py  regenerate_zip.sh  sar_preprocessing.py  visualize_false_positives.py  visualize_samples.py
research/scripts/data/density/: ais_density_map.json
research/scripts/diagnostics/: __init__.py  colab_traceability_check.py  gcp_parity_proof.py
research/tests/: README.md  __init__.py  test_download_scenes.py  test_gcp_cross_implementation.py  test_gcp_interpolation.py  test_gfw_annotations.py
services/aggregator/: Dockerfile  README.md  main.py  requirements.in  requirements.txt
services/aggregator/tests/: test_aggregator_utils.py
services/data-ingestor/: Dockerfile  README.md  main.py  requirements.in  requirements.txt  sentinel_fetcher.py
services/data-ingestor/tests/: test_main.py  test_sentinel_fetcher.py
services/data_ingestor/: Dockerfile  README.md  __init__.py  main.py  requirements.txt  sentinel_fetcher.py
services/data_ingestor/tests/: test_sentinel_fetcher.py
services/detector/: Dockerfile  README.md  main.py  requirements.in  requirements.txt
services/detector/tests/: test_detector_utils.py
services/ground-dashboard/: Dockerfile  README.md  app.py  requirements.in  requirements.txt
services/ground_dashboard/: Dockerfile  __init__.py  app.py  requirements.txt
services/satellite-monitor/: Dockerfile  README.md  main.py  requirements.in  requirements.txt
services/satellite-monitor/tests/: test_tle_fallback.py
services/satellite_monitor/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
services/satellite_monitor/tests/: test_health.py  test_tle_fallback.py
services/sentinel-preprocessor/: Dockerfile  README.md  main.py  requirements.in  requirements.txt  sar_preprocessing.py  sar_preprocessing_module.py
services/sentinel-preprocessor/tests/: test_sar_preprocessing.py
services/sentinel_preprocessor/: Dockerfile  README.md  __init__.py  main.py  requirements.txt  sar_preprocessing_module.py
shared/: __init__.py
shared/config/: __init__.py  constants.py  secrets_validator.py
shared/schemas/: events.py
shared/tests/: test_events_schema.py
tests/ground_dashboard/: test_app.py
tests/integration/: test_end_to_end.py  test_security.py
