[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "maritime-intelligence-platform"
version = "0.2.0"
description = "Maritime vessel detection from Sentinel-1 SAR imagery using edge AI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KSF Space Foundation"},
]
keywords = ["sar", "sentinel-1", "vessel-detection", "yolo", "onnx", "maritime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/ksf-space-foundation/maritime-intelligence-platform"
Documentation = "https://github.com/ksf-space-foundation/maritime-intelligence-platform#readme"
Repository = "https://github.com/ksf-space-foundation/maritime-intelligence-platform"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "ipywidgets>=8.0",
]
