[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-intelligence-platform"
version = "2.0.0"
description = "Maritime Edge AI Intelligence Platform - Real-time vessel detection from Sentinel-1 SAR imagery"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "KSF Space Foundation", email = "contact@ksf-space.org"}
]
maintainers = [
    {name = "KSF Space Foundation", email = "contact@ksf-space.org"}
]
keywords = [
    "maritime",
    "satellite",
    "sentinel-1",
    "sar",
    "vessel-detection",
    "edge-ai",
    "onnx",
    "microservices",
    "docker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FrancKINANI/maritime-edge-ai-intel-platform"
Documentation = "https://github.com/FrancKINANI/maritime-edge-ai-intel-platform#readme"
Repository = "https://github.com/FrancKINANI/maritime-edge-ai-intel-platform"
Issues = "https://github.com/FrancKINANI/maritime-edge-ai-intel-platform/issues"

[tool.setuptools]
packages = []

# =============================================================================
# Ruff — Linting & Formatting
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb", "coverage_html", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",   # allow assert
    "S603",   # allow subprocess (controlled context)
    "S311",   # allow random (non-cryptographic uses)
    "N806",   # allow non-lowercase variable names in functions
    "N803",   # allow uppercase argument names
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # docstrings — not enforced
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"services/*/main.py" = ["S310"]   # HTTP URLs allowed for internal service calls
"tests/**" = ["S101", "S311"]
"shared/**" = ["S310"]
# Research scripts: long lines tolerated for HTML/CSS templates, SVG, URLs
"research/scripts/analyze_domain_shift.py" = ["E501"]
"research/scripts/cvat_fallback_validator.py" = ["E501"]
"research/scripts/visualize_samples.py" = ["E501"]
"research/scripts/benchmark_pipeline.py" = ["E501"]
"research/scripts/build_finetune_dataset.py" = ["E501"]
"research/scripts/export_colab_dataset.py" = ["E501"]
"research/scripts/download_scenes.py" = ["E501"]
"research/scripts/compare_platform_distributions.py" = ["E501"]
"research/scripts/annotation_server.py" = ["E501", "S104"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "services/*/tests",
    "shared/tests",
    "research/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=60"
asyncio_mode = "auto"

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["services", "shared"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

# =============================================================================
# Bandit
# =============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv"]
skips = ["B101"]  # Allow assert statements in tests

# =============================================================================
# Mypy (optional)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
